# DepthCodec

./: .coveralls.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  20180924_105109.bag  README.md  appveyor.yml
sample_data/: 20181002_160340.bag  20181002_160354.bag  20181002_160435.bag  20181002_160524.bag  20181002_160554.bag  20181002_160604.bag  20181002_160640.bag  20181002_160649.bag  20181002_160659.bag  20181002_160710.bag  20181002_160723.bag  20181002_160739.bag  20181002_160747.bag  20181002_160931.bag  20181002_160940.bag  20181002_160945.bag  20181002_160952.bag  20181002_161017.bag  20181002_161026.bag  20181002_161043.bag  20181002_161123.bag  20181002_161141.bag  20181002_161201.bag  20181002_161223.bag  20181002_161249.bag  20181002_161331.bag  20181002_161340.bag  20181002_161348.bag  20181002_161355.bag  20181002_161425.bag  20181002_161448.bag  20181002_161526.bag  structured.bag
scripts/: CalculateMatricies.py  CompressRosBag.py  CompressSamples.py  CompressedLeafFactory.py  DataAnalysis.py  DepthFunctions.py  DepthImageCodec.py  Drawable.py  Errors.py  FunctionLeaf.py  Gradient.py  LineEstimation.py  Node.py  QuadTreeCodec.py  QuadTreeNode.py  Rect.py  TiledCodec.py  Tree.py  bgExampleDepth.tif  errors.py  gradiant.py  helper_functions.py  readme.md  test_DepthFunctions.py  test_FunctionLeaf.py
scripts/.cache/v/cache/: lastfailed
scripts/results/: .~lock.Analysis of FunctionSet.ods#  Analysis of FunctionSet.ods
src/: CMakeLists.txt
src/cmake/: External-Boost.cmake  External-Open3D.cmake  External-OpenCV.cmake  FindOpenCV.cmake  SuperBuild.cmake
src/modules/: CMakeLists.txt
src/modules/core/: CMakeLists.txt
src/modules/core/include/: BoostMarshaller.h  BoostMarshaller.hpp  CodecEvalFramework.h  CompressedData.h  DataStream.hpp  DepthCodec.h  DepthCodecFactory.h  Dimensions.h  Factory.h  Frame.h  Gradiant.h  IDepthCodec.h  ImageConversions.h  ImageError.h  Marshaller.hpp  MultipleQuadTree.h  NamedTimer.h  NodeAddress.h  PointCloudConversions.h  QuadTree.h  QuadTreeCodec.h  QuadTreeCodecFactory.h  QuadTreeTypes.h  Range.h  ReadWrite.h  RollingQuadTree.h  TiledCodec.h  Tree.h  ceMatrix.h  cvHelpers.h  istream_iterator_count.h  stlHelpers.h
src/modules/core/src/: CodecEvalFramework.cpp  DelegatingFactory.cpp  DepthCodecFactory.cpp  ImageError.cpp  NamedTimer.cpp  QuadTreeCodecFactory.cpp
src/modules/core/test/: TestCore.cpp
